# movieru

./: Cargo.toml  LICENSE  README.md  build.rs
src/: clip.rs  frame.rs  lib.rs  pixel.rs
src/effects/: crop.rs  grayscale.rs  mod.rs  resize.rs
src/ffmpeg/: infos.rs  mod.rs  reader.rs  writer.rs
