[package]
name = "movieru"
version = "0.0.1"
edition = "2021"
description = "Manipulate video/audio using FFMpeg by applying filters"
homepage = "https://github.com/zllak/movieru"
repository = "https://github.com/zllak/movieru"
keywords = ["video", "audio", "ffmpeg", "filters", "fx"]
authors = ["Thomas Meson <zllak@hycik.org>"]
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
serde-aux = { version = "4.4", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["std"] }

[build-dependencies]
anyhow = { version = "1.0", default-features = false }
